# agent-bench-ops

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/agent/: __init__.py  checkpoint.py  deepseek.py  graph.py  model.py  nodes.py  prompts.py  reconciliation.py  recorder.py  runtime.py  serialization.py  state.py
app/api/: health.py
app/benchmark/: loader.py  locking.py  reset.py  results.py  runner.py  schemas.py
app/domain/: accounts.py  employees.py  permissions.py  tickets.py
app/evaluation/: evaluator.py  (+5 more)
docs/: project-handoff.tex
migrations/: env.py
scripts/: demo_agent_runtime_failure.py  demo_checkpoint_claim_resume_only.py  demo_checkpoint_crash_after_create_ticket.py  demo_checkpoint_pause_before_create_ticket.py  demo_checkpoint_pause_before_tool.py  demo_checkpoint_resume_create_ticket.py  demo_checkpoint_resume_existing.py  demo_concurrent_resume_claim.py  demo_create_ticket.py  demo_deepseek_langgraph_employee_lookup.py  demo_langgraph_employee_lookup.py  demo_openai_langgraph_employee_lookup.py  demo_read_business_tools.py  demo_release_expired_resume_claim.py  demo_tool_ledger.py  demo_unknown_recovery.py  demo_update_ticket_recovery.py  evaluate_agent_run.py  import_benchmark_tasks.py  invoke_get_employee.py  reconcile_stale_runs.py  reset_business_state.py  run_and_evaluate_create_ticket.py  run_benchmark_experiment.py  setup_checkpoints.py  show_benchmark_experiment.py  smoke_deepseek_tool_call.py  verify_benchmark_execution_lock.py
tests/: test_health.py  test_models.py
(+56 files in other folders)
