[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-bench-ops"
version = "0.1.0"
description = "Observable and recoverable benchmark platform for tool-calling agents"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi>=0.116,<1.0",
    "uvicorn[standard]>=0.35,<1.0",
    "sqlalchemy[asyncio]>=2.0,<2.1",
    "asyncpg>=0.30,<1.0",
    "alembic>=1.16,<2.0",
    "redis>=6.2,<8.0",
    "pydantic-settings>=2.10,<3.0",
    "PyYAML>=6.0,<7.0",
    "langgraph>=1.2,<1.3",
    "langchain-core>=1.4,<1.5",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1.0",
    "pytest>=8.3,<10.0",
    "pytest-asyncio>=1.0,<2.0",
    "ruff>=0.12,<1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]